[package]
name = "djpass"
version = "1.2.1"
authors = ["Ronaldo Racum <ronaldo@racum.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/racum/djpass"
keywords = ["hash", "password", "python", "django", "crypto"]
categories = ["algorithms", "authentication", "cryptography", "command-line-interface"]
description = "A command-line tool to generate and verify passwords used in Django project."
edition = "2018"

[dependencies]
argparse = "^0.2"
rpassword = "^5.0"
ansi_term = "^0.12"

[dependencies.djangohashers]
version = "^1.5"
features = ["with_scrypt"]
