[package]
name = "djpass"
version = "1.4.1"
authors = ["Ronaldo Racum <ronaldo@racum.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/racum/djpass"
keywords = ["hash", "password", "python", "django", "crypto"]
categories = ["algorithms", "authentication", "cryptography", "command-line-interface"]
description = "A command-line tool to generate and verify passwords used in Django project."
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 1

[dependencies]
djangohashers = "^1.7"
argparse = "^0.2"
rpassword = "^7.2"
colored = "2.2.0"
